# My_SDL3_Master_Template

./: .gitignore  BundleAssetsMaker.py  BundleMaker.py  BundlePakMaker.py  CMakeLists.txt  Makefile  README.md  vcpkg.json
include/: CMakeLists.txt
include/config/: AppInfo.h  AppInfo.h.in  CMakeLists.txt  ConfigInfo.h  ConfigInfo.h.in  WindowConfig.h
include/gui/: BasicGui.h  CMakeLists.txt
include/handler/: AppWindow.h  BundleAssetsHandler.h  BundleHandler.h  CMakeLists.txt  ConfigHandler.h  ConfigManager.h  DrawHandler.h  EventHandler.h  GuiHandler.h  InstanceHandler.h  JsonConfigHandler.h  TextureHandler.h  WindowHandler.h
include/instance/: BaseObject.h  BasicObject.h  CMakeLists.txt
include/scenes/: BasicScene.h  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/config/: CMakeLists.txt  ConfigInfo.cpp
src/gui/: BasicGui.cpp  CMakeLists.txt
src/handler/: AppWindow.cpp  BundleAssetsHandler.cpp  BundleHandler.cpp  CMakeLists.txt  ConfigHandler.cpp  ConfigManager.cpp  DrawHandler.cpp  EventHandler.cpp  GuiHandler.cpp  InstanceHandler.cpp  JsonConfigHandler.cpp  TextureHandler.cpp  WindowHandler.cpp
src/instance/: BaseObject.cpp  BasicObject.cpp  CMakeLists.txt
src/scenes/: BasicScene.cpp  CMakeLists.txt
